--- a/estore/Gemfile
+++ b/estore/Gemfile
@@ -45,3 +45,9 @@ group :development do
   gem 'spring'
 end
 
+### Add Spree related gems
+gem 'spree', '~> 3.1.0'
+gem 'spree_auth_devise', '~> 3.1.0'
+gem 'spree_gateway', '~> 3.1.0'
+
+
