Add spree_editor extension to store.

--- a/estore/Gemfile
+++ b/estore/Gemfile
@@ -50,4 +50,6 @@ gem 'spree', '~> 3.1.0'
 gem 'spree_auth_devise', '~> 3.1.0'
 gem 'spree_gateway', '~> 3.1.0'
 
+gem 'spree_editor', github: 'spree-contrib/spree_editor', branch: '3-1-stable'
+
 
